--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,5 +1,5 @@
 body {
-	color: #8f8f8f;
+	color: #6767e0;
 	font: 12px Tahoma, sans-serif;
 	background-color: #6767e0;
 	border-top: 5px solid #7e7e7e;
