--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,6 +1,6 @@
 body {
 	color: #6767e0;
-	font: 12px Tahoma, sans-serif;
+	font: 12px Times New Roman, sans-serif;
 	background-color: #6767e0;
 	border-top: 5px solid #7e7e7e;
 	margin: 0;
