--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,4 +1,6 @@
 body {
-	font-family: 30px Arial, sans-serif
-	background-color: #f8f8f8;
+  text-align: center;
+  margin: 10;
+  font-family: Verdana, Arial, sans-serif;
+  font-size: 16px;
 }
