--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -6,5 +6,6 @@ body {
 }
 html {
   background-image: url("..//img/фульфрина.jpeg");
-  background-repeat: repeat
+  background-size: auto;
+  background-repeat: repeat;
 }
