--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -7,4 +7,5 @@ body {
 html {
   background-image: url("..//img/фульфрина.jpeg");
   background-position: 25% 75%;
+  background-position: center;
 }
