--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -6,6 +6,9 @@ body {
 }
 html {
   background-image: url("..//img/фульфрина.jpeg");
-  background-position: 5% 5%;
+  background-size: no-repeat;
   background-position: center;
+  background-size: cover;
+  height: 400px;       
+  width: 400px;          
 }
