--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -6,5 +6,6 @@ body {
 }
 html {
   background-image: url("..//img/фульфрина.jpeg");
-  background-repeat: no-repeat;        
+  background-repeat: no-repeat;
+  background-size: 6px, auto, contain;
 }
