--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -7,5 +7,5 @@ body {
 html {
   background-image: url("..//img/фульфрина.jpeg");
   background-repeat: no-repeat;
-  background-size: auto;
+  background-size: 20%;
 }
